header fix
nav width fixed so the page doesn't allow horizontal scrolling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,34 +3,33 @@
 
 /* KLEUREN
  * Wit: #FFFFFF
-<<<<<<< HEAD
  * Lichtgrijs voor achtergrond: #F6F6F6
  * Grijze achtergrond knoppen: #DADADA
  * Grijze tekst op knoppen: #9D9D9C 
  * Donkergrijs in links: #575756
-=======
- * Grijs: #9D9D9C
- * Donkergrijs: #575756
->>>>>>> Login
  * Rood: #BE1622
  */
+ 
+/* HELPER CLASSES*/
+.clearfix:after {
+	visibility: hidden;
+	display: block;
+	font-size: 0;
+	content: " ";
+	clear: both;
+	height: 0;
+}
 
+/*----- START CSS CODE -----*/
 body {
 	font-size: 16px;
 	line-height: 22px;
 	font-family: Helvetica, Arial, sans-serif;
-<<<<<<< HEAD
 	background-color: #F6F6F6;
-=======
->>>>>>> Login
 }
  
 /* INLOGGEN + REGISTREREN */
 .form {
-<<<<<<< HEAD
-=======
-	margin-top: 200px;
->>>>>>> Login
 	padding: 20px;
 }
 
@@ -38,7 +37,6 @@ body {
 	border: 1px solid #9D9D9C;
 	padding: 10px;
 	font-size: 16px;
-<<<<<<< HEAD
 	width: 100%;
 	margin: 5px 0;
 	-webkit-appearance: none;
@@ -46,16 +44,6 @@ body {
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
-=======
-	width: 98%;
-	margin: 5px 0;
-}
-
-input#remember {
-	display: inline;
-	width: 20px;
-	padding: 20px 0;
->>>>>>> Login
 }
 
 #btnLogin, #btnCreate {
@@ -64,10 +52,7 @@ input#remember {
 	border: 0px;
 	width: 100%;
 	text-align: left;
-<<<<<<< HEAD
 	-webkit-appearance: none;
-=======
->>>>>>> Login
 }
 
 #btnLogin:active {
@@ -75,27 +60,16 @@ input#remember {
 }
 
 .forgot {
-<<<<<<< HEAD
 	text-align: right;
 	margin: 0px 20px 0px 0px;
 }
 
 .forgot a {
 	padding: 20px 0px 20px 20px;
-=======
-	width: 100%;
-	text-align: right;
-	margin-top: 40px;
-}
-
-.forgot a {
-	padding: 20px 0 20px 20px;
->>>>>>> Login
 	color: #575756;
 	text-decoration: none;
 }
 
-<<<<<<< HEAD
 .btnContainer {
 	width: 100%;
 	padding: 20px;
@@ -113,21 +87,106 @@ input#remember {
 }
 
 .switchBtn a {
-=======
-.btnCreate {
-	color: #9D9D9C;
-	border: 1px solid #9D9D9C;
-	width: 95%;
-	text-align: center;
-	position: absolute;
-	bottom: 20px;
-}
-
-.btnCreate a {
->>>>>>> Login
 	color: #9D9D9C;
 	text-decoration: none;
 	font-weight: bold;
 	display: block;
 	padding: 10px;
 }
+
+/* TITLEBAR code van http://alistapart.com/article/holygrail */
+div.titlebar {
+	padding: 0px 44px;
+}
+
+div.titlebar div.column {
+	float: left;
+	position: relative;
+}
+
+div.titlebar #center {
+	width: 100%;
+	text-align: center;
+	color: #BE1622;
+	text-transform: uppercase;
+	font-weight: bold;
+	padding-top: 10px;
+}
+
+div.titlebar #left, div.titlebar #right {
+	width: 42px;
+	height: 42px;
+	text-indent: -9999px;
+}
+
+div.titlebar #left {
+	margin-left: -100%;
+	right: 44px;
+	border-bottom: 2px solid #9D9D9C;
+	border-right: 2px solid #9D9D9C;
+	background: url(../img/back.svg) no-repeat center center;
+}
+
+div.titlebar #right {
+	margin-right: -46px;
+	border-bottom: 2px solid #9D9D9C;
+	border-left: 2px solid #9D9D9C;
+	background: url(../img/add.svg) no-repeat center center;
+}
+
+hr#titlebar-divider {
+	width: 60%;
+	border: 1px solid #BE1622;
+	position: relative;
+	top: -10px;
+}
+
+
+/* BRAINSTORM LIST */
+body a {
+	text-decoration: none;
+}
+
+article.brainstorm {
+	margin: 20px 0px;
+	padding: 10px 20px;
+	border-left: 5px solid #BE1622;
+}
+
+article.brainstorm h1.brainstorm-title {
+	font-weight: normal;
+	font-size: 18px;
+	position: relative;
+	top: 3px;
+	color: #000000;
+	text-decoration: none;
+	max-width: 90%;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	-o-text-overflow: ellipsis;
+	-ms-text-overflow: ellipsis;
+}
+
+article.brainstorm span.posted {
+	font-size: 12px;
+	color: #9D9D9C;
+	position: relative;
+	top: -3px;
+	text-decoration: none;
+}
+
+article.brainstorm span.arrow {
+	display: block;
+	width: 10px;
+	height: 10px;
+	background: url(../img/arrow.svg);
+	background-size: 10px 10px;
+	float: right;
+	position: relative;
+	top: -30px;
+}
+
+
+
+
